--- a/src/EVEMon.AuthBoostrap/index.html
+++ b/src/EVEMon.AuthBoostrap/index.html
@@ -4,5 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
     <body>
+        <div aurelia-app="main">
+        </div>
     </body>
 </html>
