--- a/src/EVEMon.AuthBoostrap/src/app.html
+++ b/src/EVEMon.AuthBoostrap/src/app.html
@@ -1,5 +1,11 @@
 <template>
-    <pre>
 
-    </pre>
+    <div class="container my-4">
+        <div class="row mt-3">
+            <div class="col">
+                <router-view></router-view>
+            </div>
+        </div>
+    </div>
+
 </template>
