--- a/bootstrapper/index.html
+++ b/bootstrapper/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <html> <head> <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"> </head> <body> <div aurelia-app=main> </div> <script type="text/javascript" src="/bootstrapper/main.bundle.js"></script></body> </html>
+<!DOCTYPE html> <html> <head> <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"> </head> <body> <div aurelia-app=main> </div> <script type="text/javascript" src="/evemon/bootstrapper/main.bundle.js"></script></body> </html>
