Fixed missing slash on sub-path.

--- a/src/EVEMon.AuthBoostrap/src/pages/create-application/create-application.html
+++ b/src/EVEMon.AuthBoostrap/src/pages/create-application/create-application.html
@@ -73,7 +73,7 @@
                     </label>
                     <div class="col-sm-9 d-flex align-items-center">
                         <div class="input-group">
-                            <i>All Scopes</i>
+                            <i>All Scopes (just keep clicking until none remain)</i>
                         </div>
                     </div>
                 </div>
